fix z-index stacking

--- a/src/encoded/static/scss/bootstrap/_navbar.scss
+++ b/src/encoded/static/scss/bootstrap/_navbar.scss
@@ -127,7 +127,7 @@
   position: fixed;
   right: 0;
   left: 0;
-  z-index: $zindex-navbar-fixed;
+  z-index: 9999;
 
   // Undo the rounded corners
   @media (min-width: $grid-float-breakpoint) {
